# protoTrader

./: .automaker-lock  .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  README.md  TEMPLATE.md  a2a_auth.py  a2a_executor.py  a2a_handler.py  a2a_stores.py  audit.py  autostart.py  cache.py  chat_ui.py  docker-compose.yml  egress.py  entrypoint.sh  metrics.py  package-lock.json  package.json  paths.py  pyproject.toml  requirements-core.txt  requirements-finance.txt  requirements-google.txt  requirements.txt  security.py  server.py  telemetry_store.py  tracing.py
.beads/: .gitignore  issues.jsonl
.github/workflows/: checks.yml  docker-publish.yml  docs.yml  marketing-deploy.yml  prepare-release.yml  release.yml
activity/: __init__.py  store.py
apps/desktop/: README.md
apps/web/: index.html  package.json  vite.config.ts
beads/: store.py
config/: SOUL.md  langgraph-config.example.yaml  langgraph-config.yaml
deploy/openshell/: README.md  compose.yml  create-protoagent-sandbox.sh
docs/: index.md
docs/.vitepress/: config.mts
docs/adr/: 0001-extensibility-and-plugin-architecture.md  0002-reusable-subagent-workflows.md  0003-reactive-agent-activity-thread.md  0004-multi-instance-data-scoping.md  0005-tool-pollution-and-progressive-disclosure.md  0007-directory-aware-operator-agent.md  (+20 more)
enforcement/: __init__.py  rate_limiter.py
evals/: README.md  client.py  compare.py  judge.py  runner.py  sweep.py  tasks.json  verify.py  webhook.py
events/: __init__.py
graph/: agent.py  checkpoint_prune.py  checkpointer.py  config.py  config_io.py  conversation_harvest.py  llm.py  memory_facts.py  output_format.py  prompts.py  settings_schema.py  structured_skill.py
inbox/: store.py
knowledge/: store.py
operator_api/: beads.py  chat_routes.py  config_routes.py  console_handlers.py  knowledge_routes.py  notes.py  paths.py  plugin_routes.py  routes.py  runtime.py  subagents.py  telemetry_routes.py  web.py
protolabs_a2a/: README.md
runtime/: __init__.py  state.py
scheduler/: local.py  workstacean.py
scripts/: changelog.py  fake_openai_server.py  live_smoke.py
server/: __init__.py  __main__.py  a2a.py  agent_init.py  chat.py
static/: manifest.json
surfaces/: __init__.py
tests/: conftest.py  test_a2a_auth.py  test_a2a_card_identity.py  test_a2a_handler.py  test_a2a_integration.py  test_a2a_push_store.py  test_a2a_stores.py  test_a2a_tool_events.py  test_activity.py  test_activity_feed.py  test_agent_checkpointer.py  test_audit_hardening.py  test_backtest_engine.py  test_beads_store.py  test_behavioral.py  test_broker.py  test_cache.py  test_cache_warmer.py  test_changelog.py  test_chat_routes.py  test_checkpoint_prune.py  test_checkpointer.py  test_coding_agent_plugin.py  test_compaction_middleware.py  test_compaction_routing.py  test_confidence.py  test_config_io.py  test_config_routes.py  test_console_handlers.py  test_conversation_harvest.py  test_cost_v1_emission.py  test_deep_research.py  test_delegates_api.py  test_delegates_plugin.py  test_discord_gateway.py  test_egress.py  test_embeddings_wiring.py  test_enforcement.py  test_eval_client_a2a_1_0.py  test_eval_compare.py  (+67 more)
tools/: fallbacks.py  fs_tools.py  lg_tools.py  mcp_tools.py  notes_tools.py  peer_tools.py  shell.py
workflows/: deep-research.yaml  quant-desk.yaml  research-and-brief.yaml
(+186 files in other folders)
