[project]
name = "prototrader"
version = "0.15.0"
description = "protoTrader — natural-language trading research agent (A2A 1.0 on LangGraph); Vibe-Trading reimagined on the protoAgent paradigm"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
